# wasm-workshop-altitude-ldn-2019

./: .gitignore  .gitmodules  Dockerfile  README.md  run_devenv.sh
sha512-lucet/: Cargo.toml  bindings.json  build.rs
sha512-lucet/src/: assemblyscript.rs  main.rs  main.rs.solution  main.solution.rs
sha512-wasi/: package-lock.json  package.json
sha512-wasi/assembly/: helpers.ts  index.solution.ts  index.ts
sha512-web/: .gitignore  package-lock.json  package.json  webpack.config.js
sha512-web/src/: index.html  index.js  index.js.solution  index.solution.js
sha512-web/src/assembly/: .gitignore  index.ts
