[package]
name = "sha512-lucet"
version = "0.1.0"
authors = ["Adam C. Foltzer <acfoltzer@fastly.com>"]
edition = "2018"

[dependencies]
byteorder = "1.3.1"
failure = "0.1.5"
lucet-runtime = { path = "../lib/lucet/lucet-runtime" }

[build-dependencies]
failure = "0.1.5"
lucetc = { path = "../lib/lucet/lucetc" }